fix ui overflow #1220
this make the scrollbar buttons a lot smaller, there is no alternative, they simply don't fit they never did

--- a/styles/base.css
+++ b/styles/base.css
@@ -220,7 +220,7 @@ scrollbar button,
 scrollbar trough {
     border: none;
     background-color: @bg;
-    min-height: 2.5em;
+    min-height: 1em;
 }
 
 scrollbar slider {
